Test/errors/err_unknown_type_arg_qualifier.cb
// Only `unique` and `alias` are admitted as generic type-argument qualifiers.
import "list.cb";
class Res { int id = default; };

expect_error("unknown type qualifier 'borrow'; only 'unique' and 'alias' are allowed") {
    list<borrow Res*> bad = default;
}
